fix URL deprecated